--- a/src/Styles/footer.css
+++ b/src/Styles/footer.css
@@ -1,7 +1,7 @@
 
 .footer{
     background-color: black;
-    position: relative;
+    position: absolute;
     bottom: 0;
     width: 100%;
     margin-top: 10px;
