--- a/src/Styles/main_styles.css
+++ b/src/Styles/main_styles.css
@@ -34,6 +34,20 @@ hr{
     box-shadow: inset 0 -2px 0 0 #e9e9e9
 
 }
+.loader {
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid #8170ad; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    margin: 0px auto;
+    animation: spin 2s linear infinite;
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
 /*
 
                 */
