--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,4 +1,4 @@
-
+/* 
 .footer{
     background-color: black;
     position: absolute;
@@ -8,7 +8,19 @@
     padding: 8px 0px;
     text-align: center;
     border: 1px solid #e9e9e9;
-}
+} */
+
+.footer {
+    background-color: black;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    margin-top: 10px;
+    padding: 8px 0px;
+    text-align: center;
+    border: 1px solid #e9e9e9;
+   }
+
 .icon{
    margin: 6px 12px;
    text-decoration: none !important;
