--- a/src/styles/sign_styles.css
+++ b/src/styles/sign_styles.css
@@ -1,5 +1,3 @@
-
-
 .center{
     display: flex;
     justify-content: center;
@@ -22,3 +20,26 @@
     text-decoration: none;
     color:  #6B5B95;;
 }
+
+* {
+    box-sizing: border-box;
+   }
+
+   *:before,
+*:after {
+ box-sizing: border-box;
+}
+
+html,
+body {
+ height: 100%;
+ position: relative;
+}
+
+.main-container {
+    min-height: 100vh; /* will cover the 100% of viewport */
+    overflow: hidden;
+    display: block;
+    position: relative;
+    padding-bottom: 100px; /* height of your footer */
+   }
