--- a/src/styles/main_styles.css
+++ b/src/styles/main_styles.css
@@ -48,6 +48,10 @@ hr{
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
   }
-/*
 
-                */
+  .imgRounded {
+    border-radius: 5%;
+  }
+  .font-bold {
+    font-weight: bold;
+  }
