--- a/docs/file/src/components/cars_search/SearchCarsUI.js.html
+++ b/docs/file/src/components/cars_search/SearchCarsUI.js.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <base data-ice="baseUrl" href="../../../../">
-  <title data-ice="title">src/services/api/controllers.js | car_rental_company</title>
+  <title data-ice="title">src/components/cars_search/SearchCarsUI.js | car_rental_company</title>
   <link type="text/css" rel="stylesheet" href="css/style.css">
   <link type="text/css" rel="stylesheet" href="css/prettify-tomorrow.css">
   <script src="script/prettify/prettify.js"></script>
@@ -50,29 +50,28 @@
 </div>
 </nav>
 
-<div class="content" data-ice="content"><h1 data-ice="title">src/services/api/controllers.js</h1>
-<pre class="source-code line-number raw-source-code"><code class="prettyprint linenums" data-ice="content">import {apiBaseUrl} from &apos;../../constants/Constants&apos;
+<div class="content" data-ice="content"><h1 data-ice="title">src/components/cars_search/SearchCarsUI.js</h1>
+<pre class="source-code line-number raw-source-code"><code class="prettyprint linenums" data-ice="content">import React from &apos;react&apos;
 
-/** To send POST http request to the api **/
-export async function Post(path , body){
-    const requestOptions = {
-        method: &apos;POST&apos;,
-        headers: { &apos;Content-Type&apos;: &apos;application/json&apos; },
-        body: JSON.stringify(body)
-    };
+export default function SearchCarsUI({cars})  {
 
-    return await (await fetch(`${apiBaseUrl}/${path}`, requestOptions)).json();
-}
+    const carsArray = []
 
-/** To send GET http request to the api **/
-export async function Get(path , body){
-    const requestOptions = {
-        method: &apos;GET&apos;,
-        body: JSON.stringify(body),
-        headers: { &apos;Content-Type&apos;: &apos;application/json&apos; },
+    for(let i=0; i&lt;cars.length; i+=3){
 
-    };
-    return await (await fetch(`${apiBaseUrl}/${path}`, requestOptions)).json();
+        carsArray.push(
+            &lt;div className=&quot;row&quot; &gt;
+            { cars[i] ? cars[i] : null }
+            { cars[i+1] ? cars[i+1] : null }
+            { cars[i+2] ? cars[i+2] : null }
+            &lt;/div&gt;
+        )
+    }
+    return (
+        &lt;div&gt;
+            {carsArray}
+        &lt;/div&gt;
+    )
 }</code></pre>
 
 </div>
